[project]
name = "McLanBToolsKit"
version = "1.2.0"
description = "Minecraft LAN Broadcast Toolkit — Firewall & Broadcaster"
requires-python = ">=3.7"
license = {text = "MIT"}
readme = "README.md"

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.idea
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
force_sort_within_sections = true
combine_as_imports = true
known_first_party = ["mc_lanb_advtools", "mc_lanb_cond", "mc_lanb_firewall"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
